Setup webpack, hook up abp-filter-parser

--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
+  "name": "TrackTrackNo",
+  "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "url": "git@github.com:kdzwinel/TrackTrackNo.git"
+  },
   "scripts": {
-    "test": "eslint extension/**/*.js"
+    "test": "eslint extension/**/*.js",
+    "build": "webpack",
+    "build-watch": "webpack --watch"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.4.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "webpack": "^3.11.0"
+  },
+  "dependencies": {
+    "abp-filter-parser": "^0.2.0"
   }
 }
