--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: node_js
 node_js:
   - "8"
 
+install:
+  - yarn install --ignore-engines
+
 script:
-  - npm test
+  - yarn test
 
 notifications:
   email: false
