create popup, move things around

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,6 +5,9 @@
   "author": "Konrad Dzwinel <kdzwinel@gmail.com>",
   "version": "0.1.0",
   "default_locale": "en",
+  "browser_action": {
+    "default_popup": "src/popup.html"
+  },
   "icons": {
     "48": "assets/icons/icon-48.png",
     "96": "assets/icons/icon-96.png",
@@ -14,5 +17,5 @@
   "background": {
     "scripts": ["src/background.js"]
   },
-  "permissions": ["<all_urls>", "webRequest", "webRequestBlocking"]
+  "permissions": ["<all_urls>", "webRequest", "webRequestBlocking", "tabs"]
 }
