--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "default_locale": "en",
   "browser_action": {
+    "default_icon": "assets/icons/icon-48.png",
     "default_popup": "src/popup.html"
   },
   "icons": {
