--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "TrackTrackNo",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "url": "git@github.com:kdzwinel/TrackTrackNo.git"
   },
   "scripts": {
-    "test": "eslint extension/",
+    "test": "NODE_ENV=testing eslint extension/ && jest",
     "build": "webpack",
     "build-watch": "webpack --watch"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.4.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.4.2",
+    "regenerator-runtime": "^0.11.1",
     "webpack": "^3.11.0"
   },
   "dependencies": {
     "abp-filter-parser": "https://github.com/kdzwinel/abp-filter-parser#286c77c"
+  },
+  "jest": {
+    "transformIgnorePatterns": []
   }
 }
